# Boxes

./: Cargo.toml  garbage_code.txt  index.html  styles.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: colors.rs  general_structs.rs
src/styles/: global.scss
